<resources>
    <string name="app_name">UiApp</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_pass">Forget your password !</string>
    <string name="register">Register</string>
    <string name="haveAcc">Already have an account ?</string>
    <string name="name">Your name</string>
    <string name="coPass">Confirm Password</string>
    <string name="title_activity_drawar_screen">DrawarScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ahmed Ashraf</string>
    <string name="nav_header_subtitle">aaamab257@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="send">Send</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_map_screen">Map</string>

    <string name="api_Key">AIzaSyB0k-2yGGew1hsUQaoyoYYQXvQkMXmZYVU</string>


</resources>