<?xml version="1.0" encoding="utf-8"?>
<!--Alt + Enter -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="handler"
            type="com.aaamab.uiapp.ui.register.RegisterScreen.MyHandler" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.register.RegisterScreen">


        <ImageView
            android:id="@+id/imgTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/top_shape" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/bottom_shape" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="58sp"
            android:layout_marginTop="30sp"
            android:layout_toEndOf="@+id/imgTop"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/register"
            android:textColor="@color/text_Color"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edName"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_below="@+id/imgTop"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/ed_style"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColorHint="@color/text_Color" />

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_below="@+id/edName"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/ed_style"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColorHint="@color/text_Color" />

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_below="@+id/edEmail"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/ed_style"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColorHint="@color/text_Color" />

        <EditText
            android:id="@+id/edConPassword"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_below="@+id/edPassword"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/ed_style"
            android:hint="@string/coPass"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColorHint="@color/text_Color" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_below="@id/edConPassword"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/btn_style"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/text_Color"
            android:textSize="22sp"
            android:textStyle="bold"
            android:onClick="@{handler.register}"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnRegister"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/haveAcc"
            android:textColor="@color/text_Color"
            android:textSize="17sp"
            android:onClick="@{handler.goToLogin}"
            />

    </RelativeLayout>
</layout>

