<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="handler"
            type="com.aaamab.uiapp.ui.forgetPassword.ForgetPasswordScreen.MyHandler" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginScreen">


        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/back_24"
            android:layout_margin="15dp"
            android:id="@+id/imgBack"
            android:onClick="@{handler.onBack}"
            />

        <ImageView
            android:id="@+id/imgTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/top_shape" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/bottom_shape" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="58sp"
            android:layout_marginTop="30sp"
            android:layout_toEndOf="@+id/imgTop"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/login"
            android:textColor="@color/text_Color"
            android:textSize="30sp"
            android:visibility="gone"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_below="@+id/imgTop"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/ed_style"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColorHint="@color/text_Color" />

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_below="@+id/edEmail"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/ed_style"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:visibility="gone"
            android:textColorHint="@color/text_Color" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_below="@id/edPassword"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/btn_style"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/text_Color"
            android:textSize="22sp"
            android:textStyle="bold"
            android:onClick="@{handler.sendEmail}" />

        <TextView
            android:id="@+id/txtForgetPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/forget_pass"
            android:textColor="@color/text_Color"
            android:visibility="gone"
            android:textSize="17sp"
            />


    </RelativeLayout>
</layout>